# MDD-PJ-Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
docker/: .dockerignore  .env.example  docker-compose.yml
docker/pgadmin/: pgadmin4.db
docker/traefik/: traefik.yml
gateway/: Dockerfile  route.yml  traefik.yml
prisma/: schema.prisma
scripts/: build.sh  deploy.sh  dev.sh  docker-start.sh  start.sh  stop.sh
services/: .dockerignore  Dockerfile  docker-compose.yml
services/account/: .env.example  package.json
services/auth/: Dockerfile  (+2 more)
services/order/: .env.example  .gitignore  Dockerfile  Readme.md  aerich.ini  app.ts  docker-compose.yml  main.py  mock.py  package-lock.json  package.json  pyproject.toml  requirements.txt  swagger.json  tsconfig.json
services/order/config/: db.py  elasticsearch.py  settings.py
services/order/controllers/: order_controller.py  order_item_controller.py  price_calculation_controller.py  status_history_controller.py
services/order/data/: init.sql
services/order/models/: models.py
services/order/prisma/: schema.prisma  seed.ts
services/order/prisma/migrations/20250228031612_init/: migration.sql
services/order/prisma/migrations/20250228032309_add_tracking/: migration.sql
services/order/routes/: __init__.py  order.py  order_item.py  price_calculation.py  status_history.py
services/order/src/: app.ts  server.ts  swagger.json
services/order/tests/: test_order.py  test_order_item.py
services/order/utils/: rabbit_utils.py  validators.py
src/: server.ts
(+284 files in other folders)
